@@ -24,6 +24,16 @@ if test "$enable_selinux" = "yes"; then
 fi
 AC_SUBST([SELINUX_LIB])
 
+dnl ipv4 only option
+AC_SUBST([WITH_IPV6])
+AC_ARG_ENABLE([ipv6],
+  [AS_HELP_STRING([--disable-ipv6], [Disable IPv6 checks (for uClibc)])],
+  [enable_ipv6=$enableval],
+  [enable_ipv6="yes"])
+if test "$enable_ipv6" = "yes"; then
+  AC_DEFINE([WITH_IPV6], [1], [Use IPv6 checks])
+fi
+
 dnl Checks for libraries.
 AC_CHECK_LIB(tinfo, tgetent, TERMCAP_LIB=-ltinfo,
   AC_CHECK_LIB(ncurses, tgetent, TERMCAP_LIB=-lncurses,
